A modifiers ui_expand_flag / show_expanded is missing an update (breaking *Modifier tools* add-on functionality) #77694

Closed
opened 2020-06-09 18:10:51 +02:00 by slowk1d · 7 comments

System Information
Operating system: Windows-10-10.0.18362-SP0 64 Bits
Graphics card: GeForce GTX 965M/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 398.36

Blender Version
Broken: version: 2.90.0 Alpha, branch: master, commit date: 2020-06-08 15:55, hash: 9f7d84b656
Worked: 2.83

Short description of error
from the default file:

  • add two modifiers to the default cube (e.g. SurfaceDeform)
  • C.active_object.modifiers['SurfaceDeform'].show_expanded = False
  • C.active_object.modifiers['SurfaceDeform'].show_expanded = True
  • missing layout update

Original report:

Short description of error
Clicking on the "Toggle Stack" button in the Modifier tools add-on doesn't expand or collapse the modifiers.

Exact steps for others to reproduce the error
Based on the default startup
Go to Preferences>Add-ons>Interface> enable "Modifier Tools" add-on; create any object, go to "modifier properties" and add a couple of modifiers; go up to the 4 buttons of the modifier tools and click "Toggle Stack."

**System Information** Operating system: Windows-10-10.0.18362-SP0 64 Bits Graphics card: GeForce GTX 965M/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 398.36 **Blender Version** Broken: version: 2.90.0 Alpha, branch: master, commit date: 2020-06-08 15:55, hash: `9f7d84b656` Worked: 2.83 **Short description of error** from the default file: - add two modifiers to the default cube (e.g. SurfaceDeform) - C.active_object.modifiers['SurfaceDeform'].show_expanded = False - C.active_object.modifiers['SurfaceDeform'].show_expanded = True - missing layout update Original report: **Short description of error** Clicking on the "Toggle Stack" button in the *Modifier tools* add-on doesn't expand or collapse the modifiers. **Exact steps for others to reproduce the error** Based on the default startup Go to Preferences>Add-ons>Interface> enable "Modifier Tools" add-on; create any object, go to "modifier properties" and add a couple of modifiers; go up to the 4 buttons of the *modifier tools* and click "Toggle Stack."
Author

Added subscriber: @slowk1d

Added subscriber: @slowk1d
slowk1d changed title from "Toggle stack" option of *modifier tools* add-on doesn't work to "Toggle stack" option bug in built-in "Modifier tools" add-on 2020-06-09 18:13:31 +02:00
Member

Added subscribers: @HooglyBoogly, @lichtwerk

Added subscribers: @HooglyBoogly, @lichtwerk
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Yep, since 9b099c8612, the modifiers ui_expand_flag / show_expanded is missing an update [it does open and close, but doesnt refresh the UI properly]

CC @HooglyBoogly

Yep, since 9b099c8612, the modifiers `ui_expand_flag` / `show_expanded` is missing an update [it does open and close, but doesnt refresh the UI properly] CC @HooglyBoogly
Philipp Oeser changed title from "Toggle stack" option bug in built-in "Modifier tools" add-on to A modifiers `ui_expand_flag` / `show_expanded` is missing an update (breaking *Modifier tools* add-on functionality) 2020-06-10 13:51:43 +02:00
Hans Goudey self-assigned this 2020-06-10 15:27:18 +02:00
Member

It looks like changing the modifier expansion has to activate panel animation somehow. I'll look into it.

It looks like changing the modifier expansion has to activate panel animation somehow. I'll look into it.

This issue was referenced by a9dfad831b

This issue was referenced by a9dfad831b8b616c7f7c6b17c2764f8610926ddb
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#77694
No description provided.